--- a/src/main/java/com/pags/registration_form.html
+++ b/src/main/java/com/pags/registration_form.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Form</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h1>Registration Form</h1>
@@ -39,7 +40,13 @@
     <br> <br>
     <label for="Contact No.">Contact No.</label>
     <input id="Contact No." placeholder="Contact No." type="text">
-<form>
+
+    <br> <br>
+    <button>Submit</button>
+
+    <img src="C:/Users/12345/Downloads/img.jpg">
+</form>
+
 
 </body>
 </html>
