Встроенный, внутренний и внешний CSS

--- a/src/main/java/com/pags/registration_form.html
+++ b/src/main/java/com/pags/registration_form.html
@@ -18,10 +18,10 @@
 
 <form>
     <label for="First Name">First Name</label>
-    <input id="First Name" placeholder="First Name" type="text">
+    <input id="FirstName" placeholder="First Name" type="text">
     <br> <br>
     <label for="Last Name">Last Name</label>
-    <input id="Last Name" placeholder="Last Name" type="text">
+    <input id="LastName" placeholder="Last Name" type="text">
     <br> <br>
     <label for="Department/Office">Department/Office</label>
     <input id="Department/Office" placeholder="Department/Office" type="text">
@@ -33,13 +33,13 @@
     <input id="password" placeholder="password" type="password">
     <br> <br>
     <label for="Confirm Password">Confirm Password</label>
-    <input id="Confirm Password" placeholder="Confirm Password" type="Confirm Password">
+    <input id="ConfirmPassword" placeholder="Confirm Password" type="Password">
     <br> <br>
     <label for="E-Mail">E-Mail</label>
-    <input id="E-Mail" placeholder="E-Mail" type="email">
+    <input id="EMail" placeholder="E-Mail" type="email">
     <br> <br>
     <label for="Contact No.">Contact No.</label>
-    <input id="Contact No." placeholder="Contact No." type="text">
+    <input id="ContactNo." placeholder="Contact No." type="text">
 
     <br> <br>
     <button>Submit</button>
